app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";

body {
  padding-top: 60px;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.nextlink {
  cursor: pointer;
  text-align: center;
  color: blue;
  text-decoration: underline;
  font-size: 3em;
}

.updatebutton {
  text-align: center;
  font-size: 2em;
}

.lastclassperiod {
  text-align: center;
  color: black;
  font-size: 3em;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

.topdiv {
  top: 0;
  padding-top: 60px;
  position: fixed;
  background: #ffffff;
  opacity: 1.0;
//  width: 100%;
  visibility: visible;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

.right h2 {
  text-align: right;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #777;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* For class_periods */
.imagecolumn {
  width: 300px;
  //height: 370px;
}

/* resize images */
.imagecolumn img {
  width: 100%;
  height: auto;
}

tr.todo td {
  background-color: #cccccc;
}

td.todo {
  background-color: #cccccc;
}

/* For highlighting a particular column */
td.bghicol {
  background-color: #cccccc;
}

// TODO: use Bootstrap's tooltips instead of our own
// Tooltips
.mytooltip {
  position:relative;
  cursor:pointer;
  color:blue;
  text-decoration:underline;
  z-index: -1;
}
.tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: -1;
  // default is to place tooltip to the top
  bottom: 150%;
  left: 50%;
  margin-left: -60px;
}
.right {
  // Position the tooltip to the right
  bottom: unset;
  margin-left: unset;
  top: -10px;
  left: 105%;
}
.left {
  // Position the tooltip to the left
  bottom: unset;
  margin-left: unset;
  left: unset;
  top: -10px;
  right: 105%;
}
.mytooltip:hover span.tooltiptext {
  visibility: visible;
  opacity: 1;
}

